Added font-smoothing propertised to entire site

--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -4,6 +4,11 @@
 
 /* 1.0 Site-wide styles */
 
+html body {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
 .clear {
 	clear: both;
 }
