--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -267,6 +267,19 @@ html body .woocommerce-table.woocommerce-table--order-details.shop_table.order_d
 	text-align: right;
 }
 
+/* Job Packages Page */
+
+html body .noo-pricing-table.package-pricing {
+	display: inline-flex;
+}
+
+html body .noo-pricing-table.noo-col-3 .noo-pricing-column {
+	background-color: #ebeeef;
+	flex: 0 1 auto;
+	margin: 0 0.5rem;
+	border-radius: 5px;
+}
+
 /* 5.0 Single Job Page / Single Company Page */
 
 .more-jobs ul li {
@@ -279,7 +292,7 @@ html body .woocommerce-table.woocommerce-table--order-details.shop_table.order_d
 }
 
 .company-info .btn-readmore {
-	background-image: linear-gradient(to bottom, transparent, #ebeeef);
+	background-image: linear-gradient(to bottom, rgba(235,238,239,0.0001), #ebeeef);
 	position: relative;
 	margin-top: -9rem;
 	padding-top: 8rem;
